--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@ body{
 	padding:0 .62em;
 	font:1.2em/1.62 sans-serif;
   font-family: 'Montserrat', sans-serif;
+  background: #6534ff;
+  color: #fff;
 }
 
 h1,h2,h3 {
@@ -25,4 +27,19 @@ h1,h2,h3 {
 
 #comingsoon {
   text-align: center;
+}
+
+.container {
+  background: #fff;
+  color: #000;
+  font-weight: 400;
+  font-size: 16px;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 40px;
+}
+
+.matchdaycustom {
+
 }
