--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,11 @@ h1,h2,h3 {
   margin-top: 40px;
 }
 
-.matchdaycustom {
+h4 {
+  display:inline;
+  font-size: 26px;
+}
 
+button {
+  margin-bottom: 15px
 }
